<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerationActivity">

    <TextView
        android:id="@+id/EnterMatrixSizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:text="@string/enter_matrix_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/MatrixSizeText"
        android:layout_width="142dp"
        android:layout_height="44dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:backgroundTint="#009688"
        android:ems="10"
        android:inputType="number"
        android:textAllCaps="false"
        android:textCursorDrawable="@color/colorPrimary"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterMatrixSizeText"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/ChoiceGenTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:text="@string/choice_generation_type"
        app:layout_constraintStart_toEndOf="@+id/MatrixSizeText"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/GenTypeSpinner"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/MatrixSizeText"
        app:layout_constraintTop_toBottomOf="@+id/ChoiceGenTypeText" />

    <Button
        android:id="@+id/GenerateButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="125dp"
        android:onClick="onGenerateButtonClick"
        android:text="@string/generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/GenTypeSpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MatrixText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:maxLines="100"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenTypeSpinner" />

    <TextView
        android:id="@+id/GenerationHelloText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/generation"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>